--- a/Detectors/TRD/workflow/CMakeLists.txt
+++ b/Detectors/TRD/workflow/CMakeLists.txt
@@ -8,13 +8,14 @@
 # granted to it by virtue of its status as an Intergovernmental Organization or
 # submit itself to any jurisdiction.
 
-#add_compile_options(-O0 -pg -fPIC) 
+#add_compile_options(-O0 -pg -fPIC)
 
 o2_add_library(TRDWorkflow
                TARGETVARNAME targetName
                SOURCES src/TRDDigitizerSpec.cxx
                        src/TRDDigitWriterSpec.cxx
                        src/TRDDigitReaderSpec.cxx
+
                        src/TRDTrackletWriterSpec.cxx
                        src/TRDTrapRawWriterSpec.cxx
                        src/TRDTrapSimulatorSpec.cxx
@@ -33,6 +34,15 @@ o2_add_executable(trap-sim
                                         O2::TRDBase
                                         O2::DataFormatsTRD
                                         O2::TRDWorkflow)
+o2_add_executable(digit-reader
+                  COMPONENT_NAME trd
+                  SOURCES src/TRDDigitReaderWorkflow.cxx
+                  PUBLIC_LINK_LIBRARIES O2::Framework
+                                        O2::DPLUtils
+                                        O2::Steer
+                                        O2::TRDBase
+                                        O2::DataFormatsTRD
+                                        O2::TRDWorkflow)
 
 # o2_add_executable(stf-decoder-workflow
 #                  SOURCES src/trd-stf-decoder-workflow.cxx
@@ -44,4 +54,3 @@ if (OpenMP_CXX_FOUND)
     target_compile_definitions(${targetName} PRIVATE WITH_OPENMP)
     target_link_libraries(${targetName} PRIVATE OpenMP::OpenMP_CXX)
 endif()
-
